[tool.poetry]
name = "src"
version = "0.1.0"
description = "Python Fast Api for the Decision Optimization Project"
authors = ["EinarSalbouvet <esalo@equinor.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.121.0"
uvicorn = "^0.35.0"
pydantic-settings = "^2.9.1"
python-dotenv = "^1.2.2"
pyagrum = "^2.2.1"
networkx = "^3.5"
pyinstrument = "^5.1.1"
azure-monitor-opentelemetry = "^1.8.1"
xarray = "^2025.10.1"
psutil = "^7.2.2"

[tool.poetry.group.dev.dependencies]
black = "26.3.1"
flake8 = "^7.3.0"
pytest = "9.0.3"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.1.1"
pytest-ordering = "^0.6"
httpx = "^0.28.1"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.black]
line-length = 100
exclude = '''
    /(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist
      | alembic/versions/
    )/
'''
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
